--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div role="list" class="collection-grid w-dyn-items">
           <!-- Product | ITEM | #2001002 | HEAD -->
           <div role="listitem" class="collection-item w-dyn-item filter-item all-products postcard-products">
-            <a href="../products/product#2001002.html" class="product-wrapper w-inline-block">
+            <a href="product#2001002.html" class="product-wrapper w-inline-block">
             <div class="product-image-inner">
               <img loading="lazy"
                 alt=""
@@ -120,7 +120,7 @@
         <!-- Product | ITEM | END -->
           <!-- Product | ITEM | #2001001 | HEAD -->
           <div role="listitem" class="collection-item w-dyn-item filter-item all-products postcard-products">
-              <a href="../products/product2001001.html" class="product-wrapper w-inline-block">
+              <a href="product2001001.html" class="product-wrapper w-inline-block">
               <div class="product-image-inner">
                 <img loading="lazy"
                   alt=""
