--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 </div>
                 <div class="product-price-wrapper">
                   <div 
-                    class="product-price">$ 15.00 USD</div>
+                    class="product-price">$ 15.00 HKD</div>
                   <div
                     class="product-price compare">$ 20.00 HKD</div>
                 </div>
@@ -138,7 +138,7 @@
                   </div>
                   <div class="product-price-wrapper">
                     <div 
-                      class="product-price">$ 15.00 USD</div>
+                      class="product-price">$ 15.00 HKD</div>
                     <div
                       class="product-price compare">$ 20.00 HKD</div>
                   </div>
