--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
   <div class="announcement-nav">
     <div class="container">
       <div class="announcement-content extra-small-text">
-        <div class="announcement-message">ANNOUNCEMENT TEST | 公告測試</div>
+        <div class="announcement-message">This website is still under testing | 該網站仍在測試中</div>
       </div>
     </div><img
       src="https://assets-global.website-files.com/62ebe1e97ba90019f84584b8/633c875a94127501be3430bc_close%20icon.svg"
-      loading="lazy" data-w-id="75346636-2ee5-2bef-04f0-70b5cf607ada" alt="" class="close-announcement" />
+      loading="lazy" alt="" class="close-announcement" />
   </div>
 
   <div class="main-nav">
@@ -43,22 +43,22 @@
           </div>
         </div>
         <nav role="navigation" id="w-node-d28bca2f-e8a5-8ea1-05fd-7466eaf525ac-eaf525a0" class="nav-menu w-nav-menu">
-          <button type="button"s>
-              <a class="nav-link w-inline-block filter-btn" id="all-products">全部產品</a>
+          <button type="button" s>
+            <a class="nav-link w-inline-block filter-btn" id="all-products">全部產品</a>
           </button>
           <br>
-          <button type="button"s>
+          <button type="button" s>
             <a class="nav-link w-inline-block filter-btn" id="candle-products">香薰蠟燭</a>
           </button>
           <br>
-          <button type="button"s>
-          <a class="nav-link w-inline-block filter-btn" id="postcard-products">明信片</a>
+          <button type="button" s>
+            <a class="nav-link w-inline-block filter-btn" id="postcard-products">明信片</a>
           </button>
           <br>
-          <button type="button"s>
-          <a class="nav-link w-inline-block filter-btn" id="earring-products">手作耳環</a>
+          <button type="button" s>
+            <a class="nav-link w-inline-block filter-btn" id="earring-products">手作耳環</a>
           </button>
-      </nav>
+        </nav>
         <div id="w-node-d28bca2f-e8a5-8ea1-05fd-7466eaf525a9-eaf525a0" class="nav-brand"><a href="index.html"
             class="brand illumine-nav-brand"><img src="images/illumine-LOGO.png"></a>
         </div>
@@ -85,50 +85,104 @@
       </div>
       <div class="w-dyn-list">
         <div role="list" class="collection-grid w-dyn-items">
-          <!-- Product | ITEM | #2001002 | HEAD -->
+          <!-- Product | ITEM | #2001004 | HEAD -->
           <div role="listitem" class="collection-item w-dyn-item filter-item all-products postcard-products">
-            <a href="product#2001002.html" class="product-wrapper w-inline-block">
-            <div class="product-image-inner">
-              <img loading="lazy"
-                alt=""
-                src="images/product.2001002.jpg"
-                sizes="(max-width: 479px) 90vw, (max-width: 991px) 45vw, 29vw"
-                srcset="images/product.2001002.jpg 500w, images/product.2001002.jpg 800w, images/product.2001002.jpg 1000w"
-                class="product-image" />
-            </div>
-            <div class="product-info">
-              <div class="product-info-grid">
-                <div  class="product-desc-wrapper">
-                  <div class="product-name">黃大仙靈簽明信片</div>
-                  <div class="product-subname medium-caps-text">Wong Tai Sin Blessed Divination Postcard Collection</div>
-                </div>
-                <div class="product-price-wrapper">
-                  <div 
-                    class="product-price">$ 15.00 HKD</div>
-                  <div
-                    class="product-price compare">$ 20.00 HKD</div>
+            <a href="product2001004.html" class="product-wrapper w-inline-block">
+              <div class="product-image-inner">
+                <img loading="lazy" alt="" src="images/product.2001004.jpg"
+                  sizes="(max-width: 479px) 90vw, (max-width: 991px) 45vw, 29vw"
+                  srcset="images/product.2001004.jpg 500w, images/product.2001004.jpg 800w, images/product.2001004.jpg 1000w"
+                  class="product-image" />
+              </div>
+              <div class="product-info">
+                <div class="product-info-grid">
+                  <div class="product-desc-wrapper">
+                    <div class="product-name">車公靈籤明信片</div>
+                    <div class="product-subname medium-caps-text">Che Kung Divination Postcard Collection
+                    </div>
+                  </div>
+                  <div class="product-price-wrapper">
+                    <div class="product-price">$ 15.00 HKD</div>
+                    <div class="product-price compare"><!--COMPARE-PRICE--></div>
+                  </div>
                 </div>
               </div>
-            </div>
-          </a>
-          <div class="w-dyn-list">
-            <div role="listitem" class="w-dyn-item">
-              <div class="product-label-new">新產品!</div>
+            </a>
+            <div class="w-dyn-list">
+              <div role="listitem" class="w-dyn-item">
+                <div class="product-label-new">新產品!</div>
+              </div>
             </div>
           </div>
-        </div>
-        <!-- Product | ITEM | END -->
+          <!-- Product | ITEM | END -->
+          <!-- Product | ITEM | #2001003 | HEAD -->
+          <div role="listitem" class="collection-item w-dyn-item filter-item all-products postcard-products">
+            <a href="product2001003.html" class="product-wrapper w-inline-block">
+              <div class="product-image-inner">
+                <img loading="lazy" alt="" src="images/product.2001003.jpg"
+                  sizes="(max-width: 479px) 90vw, (max-width: 991px) 45vw, 29vw"
+                  srcset="images/product.2001003.jpg 500w, images/product.2001003.jpg 800w, images/product.2001003.jpg 1000w"
+                  class="product-image" />
+              </div>
+              <div class="product-info">
+                <div class="product-info-grid">
+                  <div class="product-desc-wrapper">
+                    <div class="product-name">收買舊電器明信片</div>
+                    <div class="product-subname medium-caps-text">Sell Home Electrical Appliances Postcard Collection
+                    </div>
+                  </div>
+                  <div class="product-price-wrapper">
+                    <div class="product-price">$ 15.00 HKD</div>
+                    <div class="product-price compare"><!--COMPARE-PRICE--></div>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <div class="w-dyn-list">
+              <div role="listitem" class="w-dyn-item">
+                <div class="product-label-new">新產品!</div>
+              </div>
+            </div>
+          </div>
+          <!-- Product | ITEM | END -->
+          <!-- Product | ITEM | #2001002 | HEAD -->
+          <div role="listitem" class="collection-item w-dyn-item filter-item all-products postcard-products">
+            <a href="product2001002.html" class="product-wrapper w-inline-block">
+              <div class="product-image-inner">
+                <img loading="lazy" alt="" src="images/product.2001002.jpg"
+                  sizes="(max-width: 479px) 90vw, (max-width: 991px) 45vw, 29vw"
+                  srcset="images/product.2001002.jpg 500w, images/product.2001002.jpg 800w, images/product.2001002.jpg 1000w"
+                  class="product-image" />
+              </div>
+              <div class="product-info">
+                <div class="product-info-grid">
+                  <div class="product-desc-wrapper">
+                    <div class="product-name">黃大仙靈簽明信片</div>
+                    <div class="product-subname medium-caps-text">Wong Tai Sin Blessed Divination Postcard Collection
+                    </div>
+                  </div>
+                  <div class="product-price-wrapper">
+                    <div class="product-price">$ 15.00 HKD</div>
+                    <div class="product-price compare"><!--COMPARE-PRICE--></div>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <div class="w-dyn-list">
+              <div role="listitem" class="w-dyn-item">
+                <div class="product-label-new">新產品!</div>
+              </div>
+            </div>
+          </div>
+          <!-- Product | ITEM | END -->
           <!-- Product | ITEM | #2001001 | HEAD -->
           <div role="listitem" class="collection-item w-dyn-item filter-item all-products postcard-products">
-              <a href="product2001001.html" class="product-wrapper w-inline-block">
+            <a href="product2001001.html" class="product-wrapper w-inline-block">
               <div class="product-image-inner">
-                <img loading="lazy"
-                  alt=""
-                  src="images/product.2001001.jpg"
+                <img loading="lazy" alt="" src="images/product.2001001.jpg"
                   sizes="(max-width: 479px) 90vw, (max-width: 991px) 45vw, 29vw"
                   srcset="images/product.2001001.jpg 500w, images/product.2001001.jpg 800w, images/product.2001001.jpg 1000w"
-                  class="product-image"
-                  />
+                  class="product-image" />
               </div>
               <div class="product-info">
                 <div class="product-info-grid">
@@ -137,10 +191,8 @@
                     <div class="product-subname medium-caps-text">Cha Chaan Teng Postcard Collection</div>
                   </div>
                   <div class="product-price-wrapper">
-                    <div 
-                      class="product-price">$ 15.00 HKD</div>
-                    <div
-                      class="product-price compare">$ 20.00 HKD</div>
+                    <div class="product-price">$ 15.00 HKD</div>
+                    <div class="product-price compare"><!--COMPARE-PRICE--></div>
                   </div>
                 </div>
               </div>
@@ -158,12 +210,38 @@
   </div>
   <footer class="section footer">
     <div class="container">
-      <div class="footer-base">
-        <div id="w-node-_7a1a68da-1988-360c-e5b1-f3dda3be2595-a3be2554" class="footer-base-left">
+      <div bis_skin_checked="1">
+        <div class="footer-brand-info" bis_skin_checked="1">
+          <div class="footer-brand" bis_skin_checked="1"><a href="index.html"
+              class="footer-brand-link w-inline-block"><img src="images/illumine-LOGO.png" loading="lazy" alt=""></a>
+          </div>
+          <div class="footer-contact footer-text-bottom" bis_skin_checked="1">
+            <div bis_skin_checked="1">Tel: +852 6623 0948 <br>Email: illumine.official.info@gmail.com</div>
+          </div>
+          <a href="https://www.instagram.com/illumine.hk/"><img class="payment w-inline-block footer-text-bottom"
+              src="images/instagram.svg"></a>
+        </div>
+      </div>
+      <div class="contact-social" bis_skin_checked="1">
+        <div class="caption-title small-caps-text" bis_skin_checked="1">付款方式</div>
+        <div class="contact-shell" bis_skin_checked="1">
+          <a class="social-link-item first w-inline-block payment"><img src="images/payment/alipayhk.svg" loading="lazy"
+              alt="">
+            <a class="social-link-item first w-inline-block payment"><img src="images/payment/applepay.svg"
+                loading="lazy" alt="">
+              <a class="social-link-item first w-inline-block payment"><img src="images/payment/googlepay.svg"
+                  loading="lazy" alt="">
+                <a class="social-link-item first w-inline-block payment"><img src="images/payment/fps.svg"
+                    loading="lazy" alt="">
+                </a>
+        </div>
+      </div>
+      <div class="footer-base footer-brand">
+        <div class="footer-base-left">
           <div class="footer-base-item small-text">© illumine — ALL RIGHTS RESERVED
           </div>
         </div>
-        <div id="w-node-_7a1a68da-1988-360c-e5b1-f3dda3be2595-a3be2554" class="footer-base-right">
+        <div class="footer-base-right">
           <div class="footer-base-item small-text">© illumine 官方網店
           </div>
         </div>
