--- a/product2001002.html
+++ b/product2001002.html
@@ -25,31 +25,28 @@
         </div>
       </div>
     </div>
-  </div>
-  <div class="section">
-    <div class="container">
-      <div id="w-node-fcb8e2c4-dde4-d44c-e795-add2cae6abda-bb9358d8" class="breadcrumbs small-text">
-        <div><a href="index.html" class="crumb-link first-child">主頁</a>/ </div>
-        <div class="w-dyn-list">
-          <div role="list" class="w-dyn-items">
-            <div role="listitem" class="w-dyn-item"><a href="#" class="current-page-link">產品</a></div>
+    <div class="section">
+      <div class="container">
+        <div class="breadcrumbs small-text">
+          <div><a href="index.html" class="crumb-link first-child">主頁</a>/ </div>
+          <div class="w-dyn-list">
+            <div role="list" class="w-dyn-items">
+              <div role="listitem" class="w-dyn-item"><a href="#" class="current-page-link">產品</a></div>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="grid-halves product-grid">
-        <div id="w-node-ad0e6bfd-41c4-5201-e1f7-7ea0230e02e5-bb9358d8" class="grid-first-half full-width-half">
-          <div class="product-image-grid">
-            <div id="w-node-_8639fc3c-bcf4-8545-3e2e-216f8e05d047-bb9358d8" class="product-gallery-image">
-              <div class="w-dyn-list w-dyn-items-repeater-ref">
-                <script type="text/x-wf-template"
-                  id="wf-template-88b392cc-869e-9902-5634-1fccb4171192">%3Cdiv%20role%3D%22listitem%22%20class%3D%22w-dyn-item%20w-dyn-repeater-item%22%3E%3Ca%20href%3D%22%23%22%20data-wf-sku-bindings%3D%22%255B%257B%2522from%2522%253A%2522f_more_images_4dr%255B%255D%2522%252C%2522to%2522%253A%2522media%2522%257D%255D%22%20class%3D%22w-inline-block%20w-lightbox%22%3E%3Cimg%20alt%3D%22%22%20loading%3D%22lazy%22%20data-wf-sku-bindings%3D%22%255B%257B%2522from%2522%253A%2522f_more_images_4dr%255B%255D%2522%252C%2522to%2522%253A%2522src%2522%257D%255D%22%20src%3D%22https%3A%2F%2Fassets-global.website-files.com%2F633affd13d39f1256f2f8c75%2F635a5c196f2b1e157b320360_item_img_3.jpeg%22%20sizes%3D%22100vw%22%20srcset%3D%22https%3A%2F%2Fassets-global.website-files.com%2F633affd13d39f1256f2f8c75%2F635a5c196f2b1e157b320360_item_img_3-p-500.jpeg%20500w%2C%20https%3A%2F%2Fassets-global.website-files.com%2F633affd13d39f1256f2f8c75%2F635a5c196f2b1e157b320360_item_img_3-p-800.jpeg%20800w%2C%20https%3A%2F%2Fassets-global.website-files.com%2F633affd13d39f1256f2f8c75%2F635a5c196f2b1e157b320360_item_img_3.jpeg%201000w%22%2F%3E%3Cscript%20type%3D%22application%2Fjson%22%20class%3D%22w-json%22%3E%7B%0A%20%20%22items%22%3A%20%5B%0A%20%20%20%20%7B%0A%20%20%20%20%20%20%22url%22%3A%20%22https%3A%2F%2Fuploads-ssl.webflow.com%2F633affd13d39f1256f2f8c75%2F635a5c196f2b1e157b320360_item_img_3.jpeg%22%2C%0A%20%20%20%20%20%20%22type%22%3A%20%22image%22%0A%20%20%20%20%7D%0A%20%20%5D%2C%0A%20%20%22group%22%3A%20%22product%22%0A%7D%3C%2Fscript%3E%3C%2Fa%3E%3C%2Fdiv%3E</script>
-                <div role="list" class="gallery-list w-dyn-items" data-wf-collection="f_more_images_4dr">
-                  <div role="listitem" class="w-dyn-item w-dyn-repeater-item"><a href="#"
-                      class="w-inline-block w-lightbox"><img alt="" loading="lazy"
-                        src="images/product-p/2001002/product.2001002-P3.jpg"
-                        sizes="100vw"
-                        srcset="images/product-p/2001002/product.2001002-P3.jpg 500w, images/product-p/2001002/product.2001002-P3.jpg 800w, images/product-p/2001002/product.2001002-P3.jpg 1000w" />
-                      <script type="application/json" class="w-json">{
+        <div class="grid-halves product-grid">
+          <div class="grid-first-half full-width-half">
+            <div class="product-image-grid">
+              <div class="product-gallery-image">
+                <div class="w-dyn-list w-dyn-items-repeater-ref">
+                  <script type="text/x-wf-template">%3Cdiv%20role%3D%22listitem%22%20class%3D%22w-dyn-item%20w-dyn-repeater-item%22%3E%3Ca%20href%3D%22%23%22%20data-wf-sku-bindings%3D%22%255B%257B%2522from%2522%253A%2522f_more_images_4dr%255B%255D%2522%252C%2522to%2522%253A%2522media%2522%257D%255D%22%20class%3D%22w-inline-block%20w-lightbox%22%3E%3Cimg%20alt%3D%22%22%20loading%3D%22lazy%22%20data-wf-sku-bindings%3D%22%255B%257B%2522from%2522%253A%2522f_more_images_4dr%255B%255D%2522%252C%2522to%2522%253A%2522src%2522%257D%255D%22%20src%3D%22https%3A%2F%2Fassets-global.website-files.com%2F633affd13d39f1256f2f8c75%2F635a5c196f2b1e157b320360_item_img_3.jpeg%22%20sizes%3D%22100vw%22%20srcset%3D%22https%3A%2F%2Fassets-global.website-files.com%2F633affd13d39f1256f2f8c75%2F635a5c196f2b1e157b320360_item_img_3-p-500.jpeg%20500w%2C%20https%3A%2F%2Fassets-global.website-files.com%2F633affd13d39f1256f2f8c75%2F635a5c196f2b1e157b320360_item_img_3-p-800.jpeg%20800w%2C%20https%3A%2F%2Fassets-global.website-files.com%2F633affd13d39f1256f2f8c75%2F635a5c196f2b1e157b320360_item_img_3.jpeg%201000w%22%2F%3E%3Cscript%20type%3D%22application%2Fjson%22%20class%3D%22w-json%22%3E%7B%0A%20%20%22items%22%3A%20%5B%0A%20%20%20%20%7B%0A%20%20%20%20%20%20%22url%22%3A%20%22https%3A%2F%2Fuploads-ssl.webflow.com%2F633affd13d39f1256f2f8c75%2F635a5c196f2b1e157b320360_item_img_3.jpeg%22%2C%0A%20%20%20%20%20%20%22type%22%3A%20%22image%22%0A%20%20%20%20%7D%0A%20%20%5D%2C%0A%20%20%22group%22%3A%20%22product%22%0A%7D%3C%2Fscript%3E%3C%2Fa%3E%3C%2Fdiv%3E</script>
+                  <div role="list" class="gallery-list w-dyn-items" data-wf-collection="f_more_images_4dr">
+                    <div role="listitem" class="w-dyn-item w-dyn-repeater-item"><a href="#"
+                        class="w-inline-block w-lightbox"><img alt="" loading="lazy"
+                          src="images/product-p/2001002/product.2001002-P3.jpg" sizes="100vw"
+                          srcset="images/product-p/2001002/product.2001002-P3.jpg 500w, images/product-p/2001002/product.2001002-P3.jpg 800w, images/product-p/2001002/product.2001002-P3.jpg 1000w" />
+                        <script type="application/json" class="w-json">{
 "items": [
     {
       "url": "images/product-p/2001002/product.2001002-P3.jpg",
@@ -58,13 +55,12 @@
   ],
   "group": "product"
 }</script>
-                    </a></div>
-                  <div role="listitem" class="w-dyn-item w-dyn-repeater-item"><a href="#"
-                      class="w-inline-block w-lightbox"><img alt="" loading="lazy"
-                        src="images/product-p/2001002/product.2001002-P2.jpg"
-                        sizes="100vw"
-                        srcset="images/product-p/2001002/product.2001002-P2.jpg 500w, images/product-p/2001002/product.2001002-P2.jpg 800w, images/product-p/2001002/product.2001002-P2.jpg 1000w" />
-                      <script type="application/json" class="w-json">{
+                      </a></div>
+                    <div role="listitem" class="w-dyn-item w-dyn-repeater-item"><a href="#"
+                        class="w-inline-block w-lightbox"><img alt="" loading="lazy"
+                          src="images/product-p/2001002/product.2001002-P2.jpg" sizes="100vw"
+                          srcset="images/product-p/2001002/product.2001002-P2.jpg 500w, images/product-p/2001002/product.2001002-P2.jpg 800w, images/product-p/2001002/product.2001002-P2.jpg 1000w" />
+                        <script type="application/json" class="w-json">{
   "items": [
     {
       "url": "images/product-p/2001002/product.2001002-P2.jpg",
@@ -73,19 +69,18 @@
   ],
   "group": "product"
 }</script>
-                    </a></div>
-                </div>
-                <div class="w-dyn-hide w-dyn-empty">
-                  <div>No items found.</div>
+                      </a></div>
+                  </div>
+                  <div class="w-dyn-hide w-dyn-empty">
+                    <div>No items found.</div>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div id="w-node-a028ebf9-7dc3-596c-4542-42440dcd5604-bb9358d8" class="product-image-main"><a href="#"
-                class="w-inline-block w-lightbox"><img alt="" loading="lazy"
-                  src="images/product-p/2001002/product.2001002-P1.jpg"
-                  sizes="100vw"
-                  srcset="images/product-p/2001002/product.2001002-P1.jpg 500w,- images/product-p/2001002/product.2001002-P1.jpg 800w, images/product-p/2001002/product.2001002-P1.jpg 1000w" />
-                <script type="application/json" class="w-json">{
+              <div class="product-image-main"><a href="#"
+                  class="w-inline-block w-lightbox"><img alt="" loading="lazy"
+                    src="images/product-p/2001002/product.2001002-P1.jpg" sizes="100vw"
+                    srcset="images/product-p/2001002/product.2001002-P1.jpg 500w,- images/product-p/2001002/product.2001002-P1.jpg 800w, images/product-p/2001002/product.2001002-P1.jpg 1000w" />
+                  <script type="application/json" class="w-json">{
   "items": [
     {
       "url": "images/product-p/2001002/product.2001002-P1.jpg",
@@ -94,72 +89,45 @@
   ],
   "group": "product"
 }</script>
-              </a></div>
-          </div>
-        </div>
-        <div class="grid-second-half full-width-half">
-          <div class="product-info no-padding">
-            <div class="product-item-name">黃大仙靈簽明信片</div>
-            <div class="product-item-subname medium-caps-text">Wong Tai Sin Blessed Divination Postcard Collection</div>
-            <div class="product-item-size small-caps-text">148mm x 100mm</div>
-            <div class="price-block">
-              <div 
-                class="product-item-price">$ 15.00 HKD</div>
-              <div
-                class="product-item-price compare-price">$ 20.00 HKD</div>
+                </a></div>
             </div>
           </div>
-          <div class="cart-wrapper">
-            <div>
-              <form data-node-type="commerce-add-to-cart-form" data-commerce-sku-id="635a6e4bb83821c27b586b82"
-                data-loading-text="Adding to cart..." data-commerce-product-id="635a6e4ac3f026c231d6ca4c"
-                class="w-commerce-commerceaddtocartform default-state">
-                <div id="w-node-_90fb1a20-c389-6796-e8d8-6f21d7e7f641-bb9358d8" class="product-qty"><label
-                    for="quantity-36ce289cd8e3f8f5e015b0790bf62c68"
-                    id="w-node-_808d5394-0579-5887-de25-f1a2c742aa2b-bb9358d8"
-                    class="cart-field-label">數量:</label><input type="number" pattern="^[0-9]+$"
-                    inputMode="numeric" id="quantity-36ce289cd8e3f8f5e015b0790bf62c68"
-                    name="commerce-add-to-cart-quantity-input" min="1"
-                    class="w-commerce-commerceaddtocartquantityinput quantity w-node-_808d5394-0579-5887-de25-f1a2c742aa2d-bb9358d8"
-                    value="1" /></div><input type="submit" id="w-node-_808d5394-0579-5887-de25-f1a2c742aa2e-bb9358d8"
-                  data-node-type="commerce-add-to-cart-button" data-loading-text="Adding to cart..." aria-busy="false"
-                  aria-haspopup="dialog" class="w-commerce-commerceaddtocartbutton add-to-cart button primary-light"
-                  value="加入購物車" /><a id="w-node-_808d5394-0579-5887-de25-f1a2c742aa2f-bb9358d8"
-                  data-node-type="commerce-buy-now-button" data-default-text="立即購買"
-                  data-subscription-text="Subscribe now" aria-busy="false" aria-haspopup="false"
-                  class="w-commerce-commercebuynowbutton buy-now button" href="/checkout">立即購買</a>
-              </form>
-              <div tabindex="0" style="display:none" class="w-commerce-commerceaddtocartoutofstock" tabindex="0">
-                <div>This product is out of stock.</div>
-              </div>
-              <div aria-live="assertive" data-node-type="commerce-add-to-cart-error" style="display:none"
-                class="w-commerce-commerceaddtocarterror">
-                <div data-node-type="commerce-add-to-cart-error"
-                  data-w-add-to-cart-quantity-error="該產品現在無法購買"
-                  data-w-add-to-cart-general-error="該產品現在無法購買"
-                  data-w-add-to-cart-mixed-cart-error="該產品現在無法購買."
-                  data-w-add-to-cart-buy-now-error="該產品現在無法購買"
-                  data-w-add-to-cart-checkout-disabled-error="該產品現在無法購買"
-                  data-w-add-to-cart-select-all-options-error="該產品現在無法購買">該產品現在無法購買</div>
+          <div class="grid-second-half full-width-half">
+            <div class="product-info no-padding">
+              <div class="product-item-name">黃大仙靈簽明信片</div>
+              <div class="product-item-subname medium-caps-text">Wong Tai Sin Blessed Divination Postcard Collection</div>
+              <div class="product-item-size small-caps-text">148mm x 100mm</div>
+              <div class="price-block">
+                <div class="product-item-price">$ 15.00 HKD</div>
+                <div class="product-item-price compare-price"><!--COMPARE-PRICE--></div>
               </div>
             </div>
-          </div>
-          <div class="product-details">
-            <div class="description-block">
-              <div class="description-header">產品資訊</div>
-              <div>Product.Information.Description</div>
+            <div class="cart-wrapper">
+              <a data-default-text="前往 WhatsApp 對話進行下單" aria-busy="false"
+                aria-haspopup="false" class="w-commerce-commercebuynowbutton buy-now button"
+                href="https://api.whatsapp.com/send/?phone=85266230948&text&type=phone_number&app_absent=0">前往 WhatsApp
+                對話進行下單</a>
             </div>
-            <div class="product-specs-wrapper">
-              <div class="product-specs ingredients">
-                <div class="spec-elem">材質</div>
-                <div class="w-richtext">
-                  <p>明信片採用高質量的珠光白卡印製，具有精緻的質感。背面留有書寫空間，方便書寫問候語或地址。</p>
+            <div class="product-details">
+              <div class="description-block">
+                <div class="description-header">產品資訊</div>
+                <div>黃大仙靈簽是一種源自中國民間信仰的占卜方式。它源於香港著名的道教聖地黃大仙祠。</br></br>
+                  黃大仙靈簽共有60個編號,代表不同的吉凶祥兆。</br></br>
+                  靈簽的內容涉及人生各個方面,包括事業、感情、健康、財運等。
                 </div>
               </div>
-              <div class="product-specs highlights">
-                <div class="spec-elem">產品編號</div>
-                <div class="w-richtext">
-                  <p>2.001.002</p>
+              <div class="product-specs-wrapper">
+                <div class="product-specs ingredients">
+                  <div class="spec-elem">材質</div>
+                  <div class="w-richtext">
+                    <p>明信片採用高質量的珠光白卡印製，具有精緻的質感。背面留有書寫空間，方便書寫問候語或地址。</p>
+                  </div>
+                </div>
+                <div class="product-specs highlights">
+                  <div class="spec-elem">產品編號</div>
+                  <div class="w-richtext">
+                    <p>2.001.002</p>
+                  </div>
                 </div>
               </div>
             </div>
@@ -167,21 +135,43 @@
         </div>
       </div>
     </div>
-  </div>
-  <footer class="section footer">
-    <div class="container">
-      <div class="footer-base">
-        <div id="w-node-_7a1a68da-1988-360c-e5b1-f3dda3be2595-a3be2554" class="footer-base-left">
-          <div class="footer-base-item small-text">© illumine — ALL RIGHTS RESERVED
+    <footer class="section footer">
+      <div class="container">
+        <div bis_skin_checked="1">
+          <div class="footer-brand-info"
+            bis_skin_checked="1">
+            <div class="footer-brand" bis_skin_checked="1"><a href="index.html"
+                class="footer-brand-link w-inline-block"><img src="images/illumine-LOGO.png" loading="lazy" alt=""></a>
+            </div>
+            <div class="footer-contact footer-text-bottom" bis_skin_checked="1">
+              <div bis_skin_checked="1">Tel: +852 6623 0948 <br>Email: illumine.official.info@gmail.com</div>
+            </div>
+            <a href="https://www.instagram.com/illumine.hk/"><img class="payment w-inline-block footer-text-bottom"
+                src="images/instagram.svg"></a>
           </div>
         </div>
-        <div id="w-node-_7a1a68da-1988-360c-e5b1-f3dda3be2595-a3be2554" class="footer-base-right">
-          <div class="footer-base-item small-text">© illumine 官方網店
-          </div>
+        <div class="contact-social" bis_skin_checked="1">
+          <div class="caption-title small-caps-text" bis_skin_checked="1">付款方式</div>
+          <div class="contact-shell" bis_skin_checked="1">
+              <a class="social-link-item first w-inline-block payment"><img src="images/payment/alipayhk.svg" loading="lazy" alt="">
+              <a class="social-link-item first w-inline-block payment"><img src="images/payment/applepay.svg" loading="lazy" alt="">
+              <a class="social-link-item first w-inline-block payment"><img src="images/payment/googlepay.svg" loading="lazy" alt="">
+              <a class="social-link-item first w-inline-block payment"><img src="images/payment/fps.svg" loading="lazy" alt="">
+          </a>
+          </div>  
         </div>
-  </footer>
-  <script src="js/jquery.js" type="text/javascript"></script>
-  <script src="js/illumine-script.js" type="text/javascript"></script>
+        <div class="footer-base footer-brand">
+          <div class="footer-base-left">
+            <div class="footer-base-item small-text">© illumine — ALL RIGHTS RESERVED
+            </div>
+          </div>
+          <div class="footer-base-right">
+            <div class="footer-base-item small-text">© illumine 官方網店
+            </div>
+          </div>
+    </footer>
+    <script src="js/jquery.js" type="text/javascript"></script>
+    <script src="js/illumine-script.js" type="text/javascript"></script>
 </body>
 
 </html>
