--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="announcement-nav">
     <div class="container">
       <div class="announcement-content extra-small-text">
-        <div class="announcement-message">This website is still under testing | 該網站仍在測試中</div>
+        <div class="announcement-message">!!! 購物滿HK$299，即可享香港地區免運費；購物少於HK$299，將收取運費HK$20。 !!!</div>
       </div>
     </div><img
       src="https://assets-global.website-files.com/62ebe1e97ba90019f84584b8/633c875a94127501be3430bc_close%20icon.svg"
